# One-Core-API-Binaries

./: .gitignore  Bug Conhecidos.docx  CMakeLists.txt  Games.docx  Incompatible Programs.xlsx  Programas Incompatíveis.docx  Programas Incompatíveis.xlsx  README  README.md  README_BR.md  README_CN.md  README_JP.md  README_RU.md  README_UK.md  TODO.docx  TODO.txt  Test Programs Steps.docx  changelog.txt  configure.cmd  dllList.txt  dlladd.txt  dllafazer.txt  ~$ogramas Incompatíveis.docx
base/system/logonui/: CMakeLists.txt
dll/directx/d3d9/: CMakeLists.txt  d3d9_haldevice.c  d3d9_private.h
dll/win32/: CMakeLists.txt
dll/win32/API-MS-WIN-APPMODEL-IDENTITY-L1-1-0/: API-MS-WIN-APPMODEL-IDENTITY-L1-1-0.rc
dll/win32/API-MS-WIN-CORE-APPCOMPAT-L1-1-1/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-COM-L1-1-0/: CMakeLists.txt  api-ms-win-core-com-l1-1-0.spec
dll/win32/API-MS-WIN-CORE-DEBUG-L1-1-0/: API-MS-WIN-CORE-DEBUG-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-ERRORHANDLING-L1-1-0/: API-MS-WIN-CORE-ERRORHANDLING-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-FIBERS-L1-1-1/: api-ms-win-core-fibers-l1-1-1.spec
dll/win32/API-MS-WIN-CORE-FILE-L1-1-0/: API-MS-WIN-CORE-FILE-L1-1-0.spec  CMakeLists.txt  main.c
dll/win32/API-MS-WIN-CORE-FILE-L2-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-HANDLE-L1-1-0/: API-MS-WIN-CORE-HANDLE-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-HEAP-L1-1-0/: API-MS-WIN-CORE-HEAP-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-INTERLOCKED-L1-1-0/: API-MS-WIN-CORE-INTERLOCKED-L1-1-0.spec  CMakeLists.txt
dll/win32/API-MS-WIN-CORE-LIBRARYLOADER-L1-1-0/: API-MS-WIN-CORE-LIBRARYLOADER-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-LOCALIZATION-OBSOLETE-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-LOCALREGISTRY-L1-1-0/: CMakeLists.txt  api-ms-win-core-localregistry-l1-1-0.spec
dll/win32/API-MS-WIN-CORE-MEMORY-L1-1-0/: API-MS-WIN-CORE-MEMORY-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-MEMORY-L1-1-2/: API-MS-WIN-CORE-MEMORY-L1-1-2.spec
dll/win32/API-MS-WIN-CORE-NAMEDPIPE-L1-1-0/: API-MS-WIN-CORE-NAMEDPIPE-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-NAMEDPIPE-L1-2-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-NORMALIZATION-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-PATH-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-PROCESSENVIRONMENT-L1-1-0/: API-MS-WIN-CORE-PROCESSENVIRONMENT-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-PROCESSTHREADS-L1-1-0/: API-MS-WIN-CORE-PROCESSTHREADS-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-PROCESSTHREADS-L1-1-2/: api-ms-win-core-processthreads-l1-1-2.spec
dll/win32/API-MS-WIN-CORE-PROCESSTOPOLOGY-OBSOLETE-L1-1-0/: API-MS-WIN-CORE-PROCESSTOPOLOGY-OBSOLETE-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-PROFILE-L1-1-0/: API-MS-WIN-CORE-PROFILE-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-PSAPI-ANSI-L1-1-0/: API-MS-WIN-CORE-PSAPI-ANSI-L1-1-0.spec  CMakeLists.txt
dll/win32/API-MS-WIN-CORE-PSAPI-L1-1-0/: CMakeLists.txt  api-ms-win-core-psapi-l1-1-0.spec
dll/win32/API-MS-WIN-CORE-PSAPI-OBSOLETE-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-REGISTRY-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-RTLSUPPORT-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-SHLWAPI-LEGACY-L1-1-0/: CMakeLists.txt  api-ms-win-core-shlwapi-legacy-l1-1-0.spec
dll/win32/API-MS-WIN-CORE-SHUTDOWN-L1-1-0/: API-MS-WIN-CORE-SHUTDOWN-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-STRING-L1-1-0/: API-MS-WIN-CORE-STRING-L1-1-0.spec  CMakeLists.txt
dll/win32/API-MS-WIN-CORE-SYNCH-L1-1-0/: API-MS-WIN-CORE-SYNCH-L1-1-0.spec  CMakeLists.txt  main.c
dll/win32/API-MS-WIN-CORE-SYNCH-L1-2-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-SYSINFO-L1-1-0/: API-MS-WIN-CORE-SYSINFO-L1-1-0.spec
dll/win32/API-MS-WIN-CORE-SYSINFO-L1-2-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-WINRT-STRING-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CORE-XSTATE-L2-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CRT-FILESYSTEM-L1-1-0/: API-MS-WIN-CRT-FILESYSTEM-L1-1-0.spec
dll/win32/API-MS-WIN-CRT-HEAP-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CRT-MATH-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CRT-MULTIBYTE-L1-1-0/: API-MS-WIN-CRT-MULTIBYTE-L1-1-0.spec
dll/win32/API-MS-WIN-CRT-PRIVATE-L1-1-0/: API-MS-WIN-CRT-PRIVATE-L1-1-0.spec
dll/win32/API-MS-WIN-CRT-PROCESS-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CRT-STRING-L1-1-0/: API-MS-WIN-CRT-STRING-L1-1-0.spec
dll/win32/API-MS-WIN-CRT-TIME-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-CRT-UTILITY-L1-1-0/: API-MS-WIN-CRT-UTILITY-L1-1-0.spec
dll/win32/API-MS-WIN-DEVICES-CONFIG-L1-1-1/: API-MS-WIN-DEVICES-CONFIG-L1-1-1.spec
dll/win32/API-MS-WIN-DOWNLEVEL-ADVAPI32-L1-1-0/: API-MS-WIN-DOWNLEVEL-ADVAPI32-L1-1-0.spec
dll/win32/API-MS-WIN-DOWNLEVEL-SHLWAPI-L1-1-0/: main.c
dll/win32/API-MS-WIN-DOWNLEVEL-SHLWAPI-L2-1-0/: API-MS-WIN-DOWNLEVEL-SHLWAPI-L2-1-0.spec
dll/win32/API-MS-WIN-POWER-SETTING-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-SECURITY-BASE-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-SECURITY-LSALOOKUP-L2-1-1/: API-MS-WIN-SECURITY-LSALOOKUP-L2-1-1.spec
dll/win32/API-MS-WIN-SECURITY-PROVIDER-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-SECURITY-SDDL-L1-1-0/: API-MS-WIN-SECURITY-SDDL-L1-1-0.spec  CMakeLists.txt
dll/win32/API-MS-WIN-SERVICE-CORE-L1-1-1/: CMakeLists.txt
dll/win32/API-MS-WIN-SERVICE-MANAGEMENT-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-SERVICE-MANAGEMENT-L2-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-SERVICE-PRIVATE-L1-1-0/: CMakeLists.txt
dll/win32/API-MS-WIN-SERVICE-WINSVC-L1-1-0/: API-MS-WIN-SERVICE-WINSVC-L1-1-0.spec  CMakeLists.txt
dll/win32/API-MS-WIN-SHELL-SHELLFOLDERS-L1-1-0/: CMakeLists.txt
dll/win32/VERNEL32/: main.h
dll/win32/actxprxy/: CMakeLists.txt
dll/win32/advapi32/: CMakeLists.txt  advapi32.spec
dll/win32/advapibase/: CMakeLists.txt
dll/win32/advapinew/: unimplemented.c
dll/win32/authz/: CMakeLists.txt  authz.spec
dll/win32/cfgmgr32/: CMakeLists.txt
dll/win32/idndl/: idndl.h  (+3 more)
drivers/dwm/: CMakeLists.txt  dwm.c  dwm.spec
wrappers/api-sets/: CMakeLists.txt  fileslist.txt
wrappers/base/: CMakeLists.txt  d3d9_main.c  dllmain.c  todo.txt
wrappers/new-dlls/: CMakeLists.txt
(+3301 files in other folders)
