
add_subdirectory(acledit)
add_subdirectory(aclui)
add_subdirectory(activeds)
add_subdirectory(actxprxy)
add_subdirectory(advapi32)
add_subdirectory(advapibase)
add_subdirectory(advapilong)
add_subdirectory(advapinew)
add_subdirectory(advpack)
add_subdirectory(API-MS-WIN-CORE-COM-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-CONSOLE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-DATETIME-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-DATETIME-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-DEBUG-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-DEBUG-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-2)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L2-1-1)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-FILE-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L2-1-1)
add_subdirectory(API-MS-WIN-CORE-HANDLE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-INTERLOCKED-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-INTERLOCKED-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-IO-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-IO-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALREGISTRY-l1-1-0)
add_subdirectory(API-MS-WIN-CORE-MEMORY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-MISC-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-NAMEDPIPE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSENVIRONMENT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSENVIRONMENT-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSTHREADS-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROFILE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSAPI-ANSI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSAPI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSAPI-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-REGISTRY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-RTLSUPPORT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-RTLSUPPORT-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-SHLWAPI-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-STRING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-STRING-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-STRING-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SYNCH-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SYSINFO-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SYSINFO-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-UTIL-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-SDDL-L1-1-0)
add_subdirectory(API-MS-WIN-SERVICE-WINSVC-L1-1-0)
add_subdirectory(atl)
add_subdirectory(atl100)
add_subdirectory(atl80)
add_subdirectory(authz)
add_subdirectory(avicap32)
add_subdirectory(avifil32)
add_subdirectory(batt)
add_subdirectory(bcrypt)
add_subdirectory(beepmidi)
add_subdirectory(browseui)
add_subdirectory(browsebase)
add_subdirectory(cabinet)
add_subdirectory(cards)
add_subdirectory(cfgmgr32)
add_subdirectory(clusapi)
add_subdirectory(comcat)
add_subdirectory(comctl32)
add_subdirectory(comctlbase)
add_subdirectory(comctlnew)
add_subdirectory(comdlg32)
add_subdirectory(compstui)
add_subdirectory(credui)
if(ARCH STREQUAL "i386")
    add_subdirectory(crtdll) # only built on x86
endif()
add_subdirectory(crypt32)
add_subdirectory(cryptfull)
add_subdirectory(cryptbasex)
add_subdirectory(cryptdlg)
add_subdirectory(cryptdll)
add_subdirectory(cryptnet)
add_subdirectory(cryptsp)
add_subdirectory(cryptui)
add_subdirectory(dbghelp)
add_subdirectory(dciman32)
add_subdirectory(desksrv)
add_subdirectory(devmgr)
add_subdirectory(dhcpcsvc)
add_subdirectory(dnsapi)
add_subdirectory(dwmapi)
add_subdirectory(faultrep)
add_subdirectory(fmifs)
if(ARCH STREQUAL "i386")
add_subdirectory(framedyn)
endif()
add_subdirectory(fusion)
add_subdirectory(gdibase)
add_subdirectory(gdiplus)
add_subdirectory(getuname)
add_subdirectory(halext)
add_subdirectory(hhctrl.ocx)
add_subdirectory(hid)
add_subdirectory(hlink)
add_subdirectory(hnetcfg)
add_subdirectory(httpapi)
add_subdirectory(iccvid)
add_subdirectory(icmp)
add_subdirectory(idndl)
add_subdirectory(ieframe)
add_subdirectory(iernonce)
add_subdirectory(imaadp32.acm)
add_subdirectory(imagehlp)
add_subdirectory(imm32)
add_subdirectory(inetcomm)
add_subdirectory(inetmib1)
add_subdirectory(initpki)
add_subdirectory(inseng)
add_subdirectory(iologmsg)
add_subdirectory(iphlpapi)
add_subdirectory(iphlpapibase)
#add_subdirectory(iprtprio) # not built in trunk
add_subdirectory(itircl)
add_subdirectory(itss)
add_subdirectory(jscript)
add_subdirectory(kernel32)
add_subdirectory(kernelbase)
add_subdirectory(kernelfull)
add_subdirectory(kernel32_vista)
add_subdirectory(loadperf)
add_subdirectory(localspl)
add_subdirectory(localui)
add_subdirectory(lpk)
add_subdirectory(lsasrv)
add_subdirectory(lz32)
add_subdirectory(mapi32)
add_subdirectory(mciavi32)
add_subdirectory(mcicda)
add_subdirectory(mciqtz32)
add_subdirectory(mciseq)
add_subdirectory(mciwave)
add_subdirectory(mlang)
add_subdirectory(mmdevapi)
add_subdirectory(mmdrv)
add_subdirectory(modemui)
add_subdirectory(mpr)
add_subdirectory(mprapi)
add_subdirectory(msacm32)
add_subdirectory(msadp32.acm)
add_subdirectory(msafd)
add_subdirectory(mscat32)
add_subdirectory(mscms)
add_subdirectory(mscoree)
add_subdirectory(msctf)
add_subdirectory(msftedit)
add_subdirectory(msg711.acm)
add_subdirectory(msgina)
add_subdirectory(msgsm32.acm)
add_subdirectory(mshtml)
add_subdirectory(msi)
add_subdirectory(mshtml.tlb)
add_subdirectory(msimg32)
add_subdirectory(msimtf)
add_subdirectory(msisip)
add_subdirectory(msisys.ocx)
#add_subdirectory(msnet32) #to be deleted in trunk.
add_subdirectory(msports)
add_subdirectory(msrle32)
add_subdirectory(mssign32)
add_subdirectory(mssip32)
add_subdirectory(mstask)
add_subdirectory(msv1_0)
add_subdirectory(msvcrt)
add_subdirectory(msvcrt20)
add_subdirectory(msvcrt40)
add_subdirectory(msvfw32)
add_subdirectory(msvidc32)
add_subdirectory(mswsock)
add_subdirectory(msxml)
add_subdirectory(msxml2)
add_subdirectory(msxml3)
add_subdirectory(msxml4)
add_subdirectory(msxml6)
add_subdirectory(nddeapi)
add_subdirectory(netapi32)
add_subdirectory(netapibase)
add_subdirectory(netapinew)
add_subdirectory(netcfgx)
add_subdirectory(netevent)
add_subdirectory(netid)
add_subdirectory(netshell)
add_subdirectory(newdev)
add_subdirectory(normaliz)
#add_subdirectory(ntdllbase)
add_subdirectory(ntdllnew)
add_subdirectory(ntdsapi)
add_subdirectory(ntlanman)
add_subdirectory(ntmarta)
add_subdirectory(ntprint)
add_subdirectory(objsel)
add_subdirectory(odbc32)
add_subdirectory(odbccp32)
add_subdirectory(ole32)
add_subdirectory(oleacc)
add_subdirectory(oleaut32)
add_subdirectory(olecli32)
add_subdirectory(oledlg)
add_subdirectory(olepro32)
add_subdirectory(olesvr32)
add_subdirectory(olethk32)
add_subdirectory(pdh)
add_subdirectory(pdhbase)
add_subdirectory(pidgen)
add_subdirectory(powrprof)
add_subdirectory(powrprofbase)
add_subdirectory(printui)
add_subdirectory(propsys)
add_subdirectory(psapi)
add_subdirectory(pstorec)
add_subdirectory(qmgr)
add_subdirectory(qmgrprxy)
add_subdirectory(query)
add_subdirectory(rasadhlp)
add_subdirectory(rasapi32)
add_subdirectory(rasdlg)
add_subdirectory(rasman)
add_subdirectory(resutils)
add_subdirectory(riched20)
add_subdirectory(riched32)
add_subdirectory(rpcrt4)
add_subdirectory(rpcrtbase)
add_subdirectory(rsabase)
add_subdirectory(rsaenh)
add_subdirectory(samlib)
add_subdirectory(samsrv)
add_subdirectory(sccbase)
add_subdirectory(schannel)
add_subdirectory(scrrun)
add_subdirectory(secbase)
add_subdirectory(secur32)
add_subdirectory(securbase)
add_subdirectory(securnew)
add_subdirectory(security)
add_subdirectory(sensapi)
add_subdirectory(serialui)
add_subdirectory(setupapi)
add_subdirectory(setupapibase)
add_subdirectory(sfc)
add_subdirectory(sfc_os)
add_subdirectory(shdoclc)
add_subdirectory(shdocvw)
add_subdirectory(shell32)
add_subdirectory(shellbase)
add_subdirectory(shfolder)
add_subdirectory(shimgvw)
add_subdirectory(shlwapi)
#add_subdirectory(shlwapibase)
add_subdirectory(slbcsp)
add_subdirectory(smdll)
add_subdirectory(sndblst)
add_subdirectory(snmpapi)
add_subdirectory(softpub)
add_subdirectory(spoolss)
add_subdirectory(srclient)
add_subdirectory(sspicli)
add_subdirectory(stdole2.tlb)
add_subdirectory(stdole32.tlb)
add_subdirectory(sti)
add_subdirectory(sxs)
add_subdirectory(syssetup)
add_subdirectory(t2embed)
add_subdirectory(tapi32)
add_subdirectory(tapiui)
add_subdirectory(traffic)
add_subdirectory(twain_32)
add_subdirectory(uext2)
add_subdirectory(ufat)
add_subdirectory(ufatx)
add_subdirectory(umpnpbase)
add_subdirectory(unicows)
add_subdirectory(untfs)
add_subdirectory(updspapi)
add_subdirectory(url)
add_subdirectory(urlmon)
add_subdirectory(userbase)
add_subdirectory(userenv)
add_subdirectory(userenvbase)
add_subdirectory(usp10)
add_subdirectory(uxtheme)
add_subdirectory(uxthemebase)
add_subdirectory(vbrowseui)
add_subdirectory(vbscript)
add_subdirectory(vdh)
add_subdirectory(vdi32)
add_subdirectory(vdmdbg)
add_subdirectory(vdvapi32)
add_subdirectory(vernel32)
add_subdirectory(vernelwow)
add_subdirectory(vecur32)
add_subdirectory(version)
add_subdirectory(vetapi32)
add_subdirectory(vetupapi)
add_subdirectory(vhell32)
#add_subdirectory(vhlwapi)
add_subdirectory(vinsta)
add_subdirectory(vindowscodecs)
add_subdirectory(vmpnpmgr)
add_subdirectory(vpcrt4)
add_subdirectory(vphlpapi)
add_subdirectory(vpowrprof)
add_subdirectory(vomctl32)
add_subdirectory(vrypt32)
add_subdirectory(vser32)
add_subdirectory(vs2_32)
add_subdirectory(vtdll)
add_subdirectory(vxtheme)
add_subdirectory(wbemdisp)
add_subdirectory(wbemprox)
if(ARCH STREQUAL "i386")
    add_subdirectory(wdmaud.drv)
endif()
add_subdirectory(wdscore)
add_subdirectory(wdscorebase)
add_subdirectory(wdslegacy)
add_subdirectory(wevtapibase)
add_subdirectory(windowscodecs)
add_subdirectory(windowscodecsbase)
add_subdirectory(windowscodecsext)
add_subdirectory(winemp3.acm)
add_subdirectory(winfax)
add_subdirectory(wing32)
add_subdirectory(winhttp)
add_subdirectory(wininet)
add_subdirectory(winmm)
add_subdirectory(winscard)
add_subdirectory(winspool)
add_subdirectory(winsta)
add_subdirectory(winstabase)
add_subdirectory(winstanew)
add_subdirectory(wintrust)
add_subdirectory(wlanapi)
add_subdirectory(wldap32)
add_subdirectory(wmi)
add_subdirectory(ws2_32)
add_subdirectory(ws2_32_new)
add_subdirectory(ws2_base)
add_subdirectory(ws2help)
add_subdirectory(wshirda)
add_subdirectory(wshtcpip)
add_subdirectory(wsock32)
add_subdirectory(wtsapi32)
add_subdirectory(wuapi)
add_subdirectory(xinput1_1)
add_subdirectory(xinput1_2)
add_subdirectory(xinput1_3)
add_subdirectory(xinput9_1_0)
add_subdirectory(xmllite)
