
add_subdirectory(acledit)
add_subdirectory(actxprxy)
add_subdirectory(advapi32)
add_subdirectory(atl)
add_subdirectory(authz)
add_subdirectory(batt)
add_subdirectory(browseui)
add_subdirectory(cabinet)
add_subdirectory(cfgmgr32)
add_subdirectory(comctl32)
add_subdirectory(comdlg32)
add_subdirectory(credui)
if(ARCH STREQUAL "i386")
    add_subdirectory(crtdll) # only built on x86
endif()
add_subdirectory(crypt32)
add_subdirectory(cryptdlg)
add_subdirectory(cryptdll)
add_subdirectory(cryptui)
add_subdirectory(dbghelp)
add_subdirectory(devmgr)
add_subdirectory(dhcpcsvc)
add_subdirectory(faultrep)
add_subdirectory(fmifs)
if(ARCH STREQUAL "i386")
add_subdirectory(framedyn)
endif()
add_subdirectory(fusion)
add_subdirectory(gdiplus)
add_subdirectory(httpapi)
add_subdirectory(idndl)
add_subdirectory(ieframe)
add_subdirectory(imagehlp)
add_subdirectory(inetcomm)
add_subdirectory(iphlpapi)
add_subdirectory(kernel32)

add_subdirectory(kernel32_vista)
add_subdirectory(lpk)
add_subdirectory(lsasrv)
add_subdirectory(lz32)
add_subdirectory(mapi32)
add_subdirectory(mlang)
add_subdirectory(mpr)
add_subdirectory(mprapi)
add_subdirectory(mscat32)
add_subdirectory(mscms)
add_subdirectory(mscoree)
add_subdirectory(msgina)
add_subdirectory(msi)
add_subdirectory(msimg32)
add_subdirectory(msimtf)
add_subdirectory(msisip)
#add_subdirectory(msnet32) #to be deleted in trunk.
add_subdirectory(mstask)
add_subdirectory(msv1_0)
add_subdirectory(msvcrt)
add_subdirectory(mswsock)
add_subdirectory(netapi32)
add_subdirectory(netid)
add_subdirectory(netshell)
add_subdirectory(newdev)
add_subdirectory(nlsdl)
add_subdirectory(normaliz)
add_subdirectory(ntdsapi)
add_subdirectory(ntmarta)
add_subdirectory(ntprint)
add_subdirectory(ntvdm64)
add_subdirectory(ole32)
add_subdirectory(oleacc)
add_subdirectory(oleaut32)
add_subdirectory(pdh)
add_subdirectory(powrprof)
add_subdirectory(printui)
add_subdirectory(psapi)
add_subdirectory(query)
add_subdirectory(rpcrt4)
add_subdirectory(samsrv)
add_subdirectory(secur32)
add_subdirectory(security)
add_subdirectory(sensapi)
add_subdirectory(serialui)
add_subdirectory(setupapi)
add_subdirectory(sfc)
add_subdirectory(sfc_os)
add_subdirectory(shdoclc)
add_subdirectory(shdocvw)
add_subdirectory(shell32)
add_subdirectory(shfolder)
add_subdirectory(shimgvw)
add_subdirectory(shlwapi)
add_subdirectory(smdll)
add_subdirectory(snmpapi)
add_subdirectory(spoolss)
add_subdirectory(srclient)
add_subdirectory(sxs)
add_subdirectory(syssetup)
add_subdirectory(traffic)
add_subdirectory(twain_32)
add_subdirectory(url)
add_subdirectory(urlmon)
add_subdirectory(userenv)
add_subdirectory(usp10)
add_subdirectory(uxtheme)
add_subdirectory(vdmdbg)
add_subdirectory(version)
add_subdirectory(windowscodecs)
add_subdirectory(winhttp)
add_subdirectory(wininet)
add_subdirectory(winmm)
add_subdirectory(winscard)
add_subdirectory(winspool)
add_subdirectory(winsta)
add_subdirectory(wintrust)
add_subdirectory(wlanapi)
add_subdirectory(wmi)
add_subdirectory(wrappers)
add_subdirectory(ws2_32)
add_subdirectory(ws2help)
add_subdirectory(wshtcpip)
add_subdirectory(wsock32)
add_subdirectory(wtsapi32)
add_subdirectory(wuapi)
add_subdirectory(xmllite)