add_subdirectory(API-MS-WIN-APPMODEL-IDENTITY-L1-1-0)
add_subdirectory(API-MS-WIN-APPMODEL-RUNTIME-L1-1-0)
add_subdirectory(API-MS-WIN-APPMODEL-RUNTIME-L1-1-1)
add_subdirectory(API-MS-WIN-APPMODEL-RUNTIME-L1-1-2)
add_subdirectory(API-MS-WIN-BASE-UTIL-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-APIQUERY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-APPCOMPAT-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-APPINIT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-ATOMS-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-COMM-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-BEM-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-COM-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-COM-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-COM-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-CONSOLE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-CONSOLE-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-CONSOLE-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-CONSOLE-L3-2-0)
add_subdirectory(API-MS-WIN-CORE-CRT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-CRT-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-DATETIME-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-DATETIME-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-DEBUG-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-DEBUG-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-DELAYLOAD-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-DELAYLOAD-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-2)
add_subdirectory(API-MS-WIN-CORE-ERRORHANDLING-L1-1-3)
add_subdirectory(API-MS-WIN-CORE-FEATURESTAGING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-FIBERS-L2-1-1)
add_subdirectory(API-MS-WIN-CORE-FILE-ANSI-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-FILE-FROMAPP-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-FILE-L1-2-2)
add_subdirectory(API-MS-WIN-CORE-FILE-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-FILE-L2-1-1)
add_subdirectory(API-MS-WIN-CORE-FILE-L2-1-2)
add_subdirectory(API-MS-WIN-CORE-HANDLE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-HEAP-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-INTERLOCKED-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-INTERLOCKED-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-IO-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-IO-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-JOB-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-JOB-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-KERNEL32-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-KERNEL32-LEGACY-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-KERNEL32-LEGACY-L1-1-2)
add_subdirectory(API-MS-WIN-CORE-KERNEL32-LEGACY-L1-1-5)
add_subdirectory(API-MS-WIN-CORE-KERNEL32-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-KERNEL32-PRIVATE-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-LARGEINTEGER-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L1-2-2)
add_subdirectory(API-MS-WIN-CORE-LIBRARYLOADER-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L1-2-2)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-OBSOLETE-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-OBSOLETE-L1-3-0)
add_subdirectory(API-MS-WIN-CORE-LOCALIZATION-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-LOCALREGISTRY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-MEMORY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-MEMORY-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-MEMORY-L1-1-2)
add_subdirectory(API-MS-WIN-CORE-MEMORY-L1-1-3)
add_subdirectory(API-MS-WIN-CORE-MEMORY-L1-1-4)
add_subdirectory(API-MS-WIN-CORE-MISC-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-NAMEDPIPE-ANSI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-NAMEDPIPE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-NAMEDPIPE-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-NAMESPACE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-NORMALIZATION-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PATH-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PRIVATEPROFILE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PRIVATEPROFILE-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-PROCESSENVIRONMENT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSENVIRONMENT-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSTHREADS-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSTHREADS-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-PROCESSTHREADS-L1-1-2)
add_subdirectory(API-MS-WIN-CORE-PROCESSTHREADS-L1-1-3)
add_subdirectory(API-MS-WIN-CORE-PROCESSTOPOLOGY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROCESSTOPOLOGY-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PROFILE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSAPI-ANSI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSAPI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSAPI-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-PSM-APPNOTIFY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-QUIRKS-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-REALTIME-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-REALTIME-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-REGISTRY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-REGISTRY-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-REGISTRY-L2-2-0)
add_subdirectory(API-MS-WIN-CORE-REGISTRYUSERSPECIFIC-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-RTLSUPPORT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-RTLSUPPORT-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-SHLWAPI-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SHLWAPI-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SHLWAPI-OBSOLETE-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-SHUTDOWN-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SIDEBYSIDE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-STRING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-STRING-L2-1-0)
add_subdirectory(API-MS-WIN-CORE-STRING-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SYNCH-ANSI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-STRINGANSI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-STRINGLOADER-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-SYNCH-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SYNCH-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-SYNCH-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-SYSINFO-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-SYSINFO-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-SYSINFO-L1-2-1)
add_subdirectory(API-MS-WIN-CORE-SYSTEMTOPOLOGY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-THREADPOOL-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-THREADPOOL-L1-2-0)
add_subdirectory(API-MS-WIN-CORE-THREADPOOL-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-THREADPOOL-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-TIMEZONE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-TOOLHELP-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-URL-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-UTIL-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-VERSION-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-VERSION-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-VERSION-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-VERSIONANSI-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINDOWSERRORREPORTING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINDOWSERRORREPORTING-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-WINRT-ERROR-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINRT-ERROR-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-WINRT-ERRORPRIVATE-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-WINRT-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINRT-REGISTRATION-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINRT-ROPARAMETERIZEDIID-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINRT-STRING-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WINRT-STRING-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-WOW64-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-WOW64-L1-1-1)
add_subdirectory(API-MS-WIN-CORE-XSTATE-L1-1-0)
add_subdirectory(API-MS-WIN-CORE-XSTATE-L2-1-0)
add_subdirectory(API-MS-WIN-CRT-CONIO-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-CONVERT-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-ENVIRONMENT-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-FILESYSTEM-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-HEAP-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-LOCALE-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-MATH-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-MULTIBYTE-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-PROCESS-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-RUNTIME-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-STDIO-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-STRING-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-TIME-L1-1-0)
add_subdirectory(API-MS-WIN-CRT-UTILITY-L1-1-0)
add_subdirectory(API-MS-WIN-DEVICES-CONFIG-L1-1-0)
add_subdirectory(API-MS-WIN-DEVICES-CONFIG-L1-1-1)
add_subdirectory(API-MS-WIN-DEVICES-QUERY-L1-1-1)
add_subdirectory(API-MS-WIN-DOWNLEVEL-ADVAPI32-L1-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-ADVAPI32-L2-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-KERNEL32-L2-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-NORMALIZ-L1-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-OLE32-L1-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-SHELL32-L1-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-SHLWAPI-L1-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-SHLWAPI-L2-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-USER32-L1-1-0)
add_subdirectory(API-MS-WIN-DOWNLEVEL-VERSION-L1-1-0)
add_subdirectory(API-MS-WIN-DX-D3DKMT-L1-1-0)
add_subdirectory(API-MS-WIN-EVENTING-CLASSICPROVIDER-L1-1-0)
add_subdirectory(API-MS-WIN-EVENTING-CONSUMER-L1-1-0)
add_subdirectory(API-MS-WIN-EVENTING-CONTROLLER-L1-1-0)
add_subdirectory(API-MS-WIN-EVENTING-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-EVENTING-PROVIDER-L1-1-0)
add_subdirectory(API-MS-WIN-EVENTLOG-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-GAMING-TCUI-L1-1-0)
add_subdirectory(API-MS-WIN-GDI-DPIINFO-L1-1-0)
add_subdirectory(API-MS-WIN-MM-JOYSTICK-L1-1-0)
add_subdirectory(API-MS-WIN-MM-MISC-L1-1-1)
add_subdirectory(API-MS-WIN-MM-MME-L1-1-0)
add_subdirectory(API-MS-WIN-MM-TIME-L1-1-0)
add_subdirectory(API-MS-WIN-NTUSER-DC-ACCESS-L1-1-0)
add_subdirectory(API-MS-WIN-NTUSER-RECTANGLE-L1-1-0)
add_subdirectory(API-MS-WIN-NTUSER-SYSPARAMS-L1-1-0)
add_subdirectory(API-MS-WIN-PERF-LEGACY-L1-1-0)
add_subdirectory(API-MS-WIN-POWER-BASE-L1-1-0)
add_subdirectory(API-MS-WIN-POWER-SETTING-L1-1-0)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-DRAW-L1-1-0)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-PRIVATE-L1-1-4)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-WINDOW-L1-1-0)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-WINEVENT-L1-1-0)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-WMPOINTER-L1-1-0)
add_subdirectory(API-MS-WIN-RTCORE-NTUSER-WMPOINTER-L1-1-3)
add_subdirectory(API-MS-WIN-SECURITY-ACTIVEDIRECTORYCLIENT-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-AUDIT-L1-1-1)
add_subdirectory(API-MS-WIN-SECURITY-BASE-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-BASE-L1-2-0)
add_subdirectory(API-MS-WIN-SECURITY-BASE-PRIVATE-L1-1-1)
add_subdirectory(API-MS-WIN-SECURITY-CREDENTIALS-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-CRYPTOAPI-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-GROUPPOLICY-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-LSALOOKUP-ANSI-L2-1-0)
add_subdirectory(API-MS-WIN-SECURITY-LSALOOKUP-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-LSALOOKUP-L1-1-1)
add_subdirectory(API-MS-WIN-SECURITY-LSALOOKUP-L2-1-0)
add_subdirectory(API-MS-WIN-SECURITY-LSALOOKUP-L2-1-1)
add_subdirectory(API-MS-WIN-SECURITY-LSAPOLICY-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-PROVIDER-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-SDDL-L1-1-0)
add_subdirectory(API-MS-WIN-SECURITY-SYSTEMFUNCTIONS-L1-1-0)
add_subdirectory(API-MS-WIN-SERVICE-CORE-L1-1-0)
add_subdirectory(API-MS-WIN-SERVICE-CORE-L1-1-1)
add_subdirectory(API-MS-WIN-SERVICE-MANAGEMENT-L1-1-0)
add_subdirectory(API-MS-WIN-SERVICE-MANAGEMENT-L2-1-0)
add_subdirectory(API-MS-WIN-SERVICE-PRIVATE-L1-1-0)
add_subdirectory(API-MS-WIN-SERVICE-PRIVATE-L1-1-1)
add_subdirectory(API-MS-WIN-SERVICE-WINSVC-L1-1-0)
add_subdirectory(API-MS-WIN-SERVICE-WINSVC-L1-2-0)
add_subdirectory(API-MS-WIN-SHCORE-OBSOLETE-L1-1-0)
add_subdirectory(API-MS-WIN-SHCORE-SCALING-L1-1-0)
add_subdirectory(API-MS-WIN-SHCORE-SCALING-L1-1-1)
add_subdirectory(API-MS-WIN-SHCORE-STREAM-L1-1-0)
add_subdirectory(API-MS-WIN-SHCORE-STREAM-WINRT-L1-1-0)
add_subdirectory(API-MS-WIN-SHCORE-THREAD-L1-1-0)
add_subdirectory(API-MS-WIN-SHELL-SHELLCOM-L1-1-0)
add_subdirectory(API-MS-WIN-SHELL-SHELLFOLDERS-L1-1-0)