add_subdirectory(kernelbase_wrapper)
add_subdirectory(ntext_wrapper)
# add_subdirectory(ntkrnlext)
add_subdirectory(advapi32_wrapper)
add_subdirectory(browseui_wrapper)
add_subdirectory(d3d9_wrapper)
add_subdirectory(pdh_wrapper)
add_subdirectory(gdi32_wrapper)
add_subdirectory(secur32_wrapper)
add_subdirectory(netapi32_wrapper)
add_subdirectory(setupapi_wrapper)
add_subdirectory(shell32_wrapper)
add_subdirectory(shlwapi_wrapper)
add_subdirectory(windowscodecs_wrapper)
add_subdirectory(winsta_wrapper)
add_subdirectory(ole32_wrapper)
add_subdirectory(umpnpmgr_wrapper)
add_subdirectory(rpcrt4_wrapper)
add_subdirectory(iphlpapi_wrapper)
add_subdirectory(powrprof_wrapper)
add_subdirectory(ws2_32_wrapper)
add_subdirectory(user32_wrapper)
add_subdirectory(uxtheme_wrapper)