add_subdirectory(avrt)
add_subdirectory(bcrypt_new)
add_subdirectory(combase)
add_subdirectory(cryptsp)
# add_subdirectory(desksrv)
add_subdirectory(dwmapi)
add_subdirectory(evr)
add_subdirectory(explorerframe)
add_subdirectory(fntcache)
#add_subdirectory(fwpuclnt)
add_subdirectory(gameux)
add_subdirectory(ktmw32)
add_subdirectory(mfplat)
add_subdirectory(mmdevapi)
add_subdirectory(rstrtmgr)
add_subdirectory(rtworkq)
add_subdirectory(secbase)
add_subdirectory(shcore)
add_subdirectory(sspicli)
add_subdirectory(uiautomationcore)
# add_subdirectory(wdscore)
add_subdirectory(wer)
add_subdirectory(wpc)