add_subdirectory(avrt)
add_subdirectory(bcrypt_new)
add_subdirectory(combase)
add_subdirectory(cryptsp)
# add_subdirectory(desksrv)
add_subdirectory(dwmapi)
add_subdirectory(evr)
add_subdirectory(explorerframe)
add_subdirectory(fntcache)
add_subdirectory(fwpuclnt)
add_subdirectory(gameux)
add_subdirectory(gamingtcui)
add_subdirectory(ktmw32)
add_subdirectory(mf)
add_subdirectory(mfplat)
add_subdirectory(mfreadwrite)
add_subdirectory(mmdevapi)
add_subdirectory(npmshtml)
add_subdirectory(opcservices)
add_subdirectory(prntvpt)
add_subdirectory(rstrtmgr)
add_subdirectory(rtworkq)
add_subdirectory(sas)
add_subdirectory(secbase)
#add_subdirectory(sechost)
add_subdirectory(shcore)
add_subdirectory(sppc)
add_subdirectory(srvcli)
add_subdirectory(sspicli)
add_subdirectory(svrapi)
add_subdirectory(taskschd)
add_subdirectory(tdh)
add_subdirectory(uianimation)
add_subdirectory(uiautomationcore)
add_subdirectory(uiribbon)
add_subdirectory(wdscore)
add_subdirectory(wer)
#add_subdirectory(wevtapi)
#add_subdirectory(wimgapi)
#add_subdirectory(winusb)
add_subdirectory(wpc)
#add_subdirectory(wpcap)
#add_subdirectory(xpsprint)
#add_subdirectory(xpssvcs)